# varint

./: .gitignore  BUILD_AND_TEST.md  CMakeLists.txt  MEMORY_SAFETY_REPORT.md  README.md  check_warnings.sh  run_all_compilers.sh  run_all_tests.sh  run_unit_tests.sh  test_all_comprehensive.sh  test_all_examples_sanitizers.sh  test_trie_comprehensive.sh  test_trie_fast.sh  test_trie_memory_safety.sh  test_trie_sanitizers.sh  test_trie_server.sh
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  nightly.yml  (+1 more)
compiler_check_results/: clang_results.txt  gcc_results.txt
docs/: ARCHITECTURE.md  BUILD_AND_TEST.md  CHOOSING_VARINTS.md  COMPREHENSIVE_SYSTEM_AUDIT.md  CORRECTNESS_AUDIT.md  ENCODING_ANALYSIS.md  QUICK_REFERENCE.md  struct-optimization-guide.md
examples/: CMakeLists.txt  README.md
src/: CMakeLists.txt  perf.h  varintAdaptive.c  varintAdaptive.h  varintAdaptiveTest.c  varintBitmap.c  varintBitmap.h  varintBitmapTest.c  varintChained.c  varintChained.h  varintCompare.c  varintDelta.c  varintDelta.h  varintDeltaTest.c  varintDict.c  varintDict.h  varintDictTest.c  varintDimension.c  varintDimension.h  varintDimensionTest.c  varintExternal.c  varintExternal.h  varintExternalBigEndian.h  varintFOR.c  varintFOR.h  varintFORTest.c  varintFloat.c  varintFloat.h  varintFloatTest.c  varintGroup.c  varintGroup.h  varintGroupTest.c  varintPFOR.c  varintPFOR.h  varintPFORTest.c  varintPacked.h  varintPackedTest.c  varintSplit.h  varintSplitFull.h  varintSplitFull16.h  (+3 more)
tools/: README.md  struct_all_analysis.c  struct_analyzer.c  struct_audit.c  struct_size_check.c
(+54 files in other folders)
